# Skill_Bridge_API

./: .env.example  .gitignore  CONTACT.txt  README.md  pyproject.toml  render.yaml  requirements.txt
src/: config.py  db.py  main.py  requirements.txt
src/api/: attendance.py  auth.py  batches.py  monitoring.py  sessions.py
src/models/: models.py
src/schemas/: auth.py
src/tests/: test_api.py
src/utils/: auth.py
